<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".view.DetailedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_white_48dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:id="@+id/info_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Detailed description"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp">

            <EditText
                android:id="@+id/edit_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_title"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/edit_book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_price"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/edit_book_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/edit_book_supplier_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_remove_white_48dp" />

                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_add_white_48dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:src="@drawable/ic_keyboard_backspace_white_48dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_call_white_48dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:src="@drawable/ic_done_white_48dp" />

    </LinearLayout>
</LinearLayout>
